# fail-avoidance

./: .gitignore  Attempt.hpp  CMakeLists.txt  Person.hpp  Questions.hpp  Storage.hpp  Tester.cc  Tester.cpp  Tester.h  Tester.hpp  Tester.pas  UTester.pas  build_n_run_tests.sh  build_so.sh  run_tester.sh
lib/x86_64-linux/: tester.compiled
pascal/: .gitignore  MyApplicationContext.pas  UInfoForm.pas  UInstructionForm.pas  ULoginForm.lfm  ULoginForm.pas  UTestForm.pas  UTester.pas  data.csv  datetimepicker.pas  launcher.sh  lclcalwrapper.pas  tester.lpi  tester.lpr  tester.lps
src/: Answer.hpp  Attempt.cpp  Attempt.hpp  CSVAdapter.hpp  Person.hpp  Question.hpp  Questions.hpp  Tester.cc  Tester.cpp  Tester.h  Tester.hpp  Tester.pas  build_so.sh
tests/: main.hpp
